Change models location from web app project to library project

--- a/ExerciseXData/Views/Category/Index.cshtml
+++ b/ExerciseXData/Views/Category/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ExerciseXData.Models.Categories>
+﻿
+@model IEnumerable<Categories>
 @{
     ViewData["Title"] = "List of Category";
 }
