--- a/ExerciseXData/Views/Diets/Create.cshtml
+++ b/ExerciseXData/Views/Diets/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model Diets
+﻿
+@model Diets
 
 <form method="post">
     <div class=" border p-3 mt-4">
@@ -7,7 +8,13 @@
             <hr />
         </div>
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
-        
+
+        <div class="mb-3">
+            <label asp-for="D_Id"></label>
+            <input asp-for="D_Id" class="form-control" />
+            <span asp-validation-for="D_Id" class="text-danger"></span>
+        </div>
+
         <div class="mb-3">
             <label asp-for="D_Name"></label>
             <input asp-for="D_Name" class="form-control" />
