--- a/ExerciseXData/Views/Diets/Details.cshtml
+++ b/ExerciseXData/Views/Diets/Details.cshtml
@@ -9,12 +9,11 @@
         
         <div class = "form-group text-center"></div>
 
-@*        <div class="mb-3">
-        <label asp-for="C_Id"></label>
-        <input asp-for="C_Id" class="form-control" readonly />
-        <span asp-validation-for="C_Id" class="text-danger"></span>
-        </div>*@
-
+        <div class="mb-3">
+            <label asp-for="D_Id"></label>
+            <input asp-for="D_Id" class="form-control" readonly />
+            <span asp-validation-for="D_Id" class="text-danger"></span>
+        </div>
 
         <div class="mb-3">
             <label asp-for="D_Name"></label>
