--- a/ExerciseXData/Views/Exercises/Details.cshtml
+++ b/ExerciseXData/Views/Exercises/Details.cshtml
@@ -11,15 +11,21 @@
         <div class = "form-group text-center"></div>
 
         <div class="mb-3">
-        <label asp-for="C_Id"></label>
-        <input asp-for="C_Id" class="form-control" readonly />
-        <span asp-validation-for="C_Id" class="text-danger"></span>
+            <label asp-for="E_Id"></label>
+            <input asp-for="E_Id" class="form-control" readonly />
+            <span asp-validation-for="E_Id" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
-        <label asp-for="E_Image"></label>
-        <input asp-for="E_Image" class="form-control" readonly />
-        <span asp-validation-for="E_Image" class="text-danger"></span>
+            <label asp-for="C_Id"></label>
+            <input asp-for="C_Id" class="form-control" readonly />
+            <span asp-validation-for="C_Id" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+            <label asp-for="E_Image"></label>
+            <input asp-for="E_Image" class="form-control" readonly />
+            <span asp-validation-for="E_Image" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
