--- a/ExerciseXData/Views/Exercises/Create.cshtml
+++ b/ExerciseXData/Views/Exercises/Create.cshtml
@@ -10,6 +10,12 @@
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
         
         <div class="mb-3">
+            <label asp-for="E_Id"></label>
+            <input asp-for="E_Id" class="form-control" />
+            <span asp-validation-for="E_Id" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
             <label asp-for="C_Id"></label>
             <input asp-for="C_Id" class="form-control" />
             <span asp-validation-for="C_Id" class="text-danger"></span>
