--- a/ExerciseXData/Views/Exercises/Edit.cshtml
+++ b/ExerciseXData/Views/Exercises/Edit.cshtml
@@ -9,11 +9,17 @@
         <div asp-validation-summary="ModelOnly" class = "text-danger"></div> @*Displays all the validation texts*@
 
         <div class=" form-group text-center">
-@*            <div class="mb-3">
+            <div class="mb-3">
+                <label asp-for="E_Id"></label>
+                <input asp-for="E_Id" class="form-control" />
+                <span asp-validation-for="E_Id" class="text-danger"></span>
+            </div>
+
+           <div class="mb-3">
                 <label asp-for="C_Id"></label>
                 <input asp-for="C_Id" class="form-control" />
                 <span asp-validation-for="C_Id" class="text-danger"></span>
-            </div>*@
+            </div>
 
             <div class="mb-3">
                 <label asp-for="E_Image"></label>
