Adjusted AppDbContext, can access index of every page, but cannot create yet

--- a/ExerciseXData/Views/Diets/Delete.cshtml
+++ b/ExerciseXData/Views/Diets/Delete.cshtml
@@ -13,61 +13,61 @@
         
         <div class="mb-3">
             <label asp-for="D_Id"></label>
-            <input asp-for="D_Id" disabled class="form-control" />
+            <input asp-for="D_Id" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Name"></label>
-            <input asp-for="D_Name" disabled class="form-control" />
+            <input asp-for="D_Name" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Description"></label>
-            <input asp-for="D_Description" disabled class="form-control" />
+            <input asp-for="D_Description" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Pros_1"></label>
-            <input asp-for="D_Pros_1" disabled class="form-control" />
+            <input asp-for="D_Pros_1" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Pros_2"></label>
-            <input asp-for="D_Pros_2" disabled class="form-control" />
+            <input asp-for="D_Pros_2" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Pros_3"></label>
-            <input asp-for="D_Pros_3" disabled class="form-control" />
+            <input asp-for="D_Pros_3" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Cons_1"></label>
-            <input asp-for="D_Cons_1" disabled class="form-control" />
+            <input asp-for="D_Cons_1" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Cons_2"></label>
-            <input asp-for="D_Cons_2" disabled class="form-control" />
+            <input asp-for="D_Cons_2" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Cons_3"></label>
-            <input asp-for="D_Cons_3" disabled class="form-control" />
+            <input asp-for="D_Cons_3" disabled disabled class="form-control" />
 
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Modified_Date"></label>
-            <input asp-for="D_Modified_Date" class="form-control" />
+            <input asp-for="D_Modified_Date" disabled class="form-control" />
             <span asp-validation-for="D_Modified_Date" class="text-danger"></span>
         </div>
 
