--- a/ExerciseXData/Views/Diets/Details.cshtml
+++ b/ExerciseXData/Views/Diets/Details.cshtml
@@ -22,6 +22,12 @@
         </div>
 
         <div class="mb-3">
+            <label asp-for="D_Description"></label>
+            <input asp-for="D_Description" class="form-control" />
+            <span asp-validation-for="D_Description" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
             <label asp-for="D_Pros_1"></label>
         <input asp-for="D_Pros_1" class="form-control" readonly />
             <span asp-validation-for="D_Pros_1" class="text-danger"></span>
@@ -50,12 +56,11 @@
             <label asp-for="D_Cons_3"></label>
             <input asp-for="D_Cons_3" class="form-control" readonly />
             <span asp-validation-for="D_Cons_3" class="text-danger"></span>
-
         </div>
 
         <div class="mb-3">
             <label asp-for="D_Modified_Date"></label>
-            <input asp-for="D_Modified_Date" class="form-control" />
+            <input asp-for="D_Modified_Date" class="form-control" readonly />
             <span asp-validation-for="D_Modified_Date" class="text-danger"></span>
         </div>
 
