--- a/ExerciseXData/Views/Shared/_Layout.cshtml
+++ b/ExerciseXData/Views/Shared/_Layout.cshtml
@@ -40,8 +40,8 @@
                             </a>
 
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-controller="Statistic" asp-action="Diets">Diets</a>
-                                <a class="dropdown-item" asp-controller="Statistic" asp-action="Exercises"> Exercises</a>
+                                <a class="dropdown-item" asp-controller="Statistics" asp-action="Diets">Diets</a>
+                                <a class="dropdown-item" asp-controller="Statistics" asp-action="Exercises"> Exercises</a>
                                 
                             </div>
 
