--- a/ExerciseXData/Views/Diets/Index.cshtml
+++ b/ExerciseXData/Views/Diets/Index.cshtml
@@ -21,11 +21,11 @@
             <tr>
                 <th> Diet Id</th>
                 <th> Diet Name</th>
-                <th> Descriptions</th>
-                @* <th>Food Name 1</th>
-                <th>Food Name 2</th>
-                <th>Food Name 3</th>
-                <th>Food Name 4</th>
+                <th> Description</th>
+                <th>Serving Size </th>
+                <th>Recommended Servings</th>
+                <th>Frequency</th>
+                @* <th>Food Name 4</th>
                 <th>Food Name 5</th>
                 <th>Food Name 6</th>
                 <th>Food Name 7</th>
@@ -51,18 +51,9 @@
                     <td>@obj.D_Id</td>
                     <td>@obj.D_Name</td>
                     <td>@obj.D_Description</td>
-                    @* <td>@obj.D_Food_Name_1</td>
-                    <td>@obj.D_Food_Name_2</td>
-                    <td>@obj.D_Food_Name_3</td>
-                    <td>@obj.D_Food_Name_4</td>
-                    <td>@obj.D_Food_Name_5</td>
-                    <td>@obj.D_Food_Name_6</td>
-                    <td>@obj.D_Food_Name_7</td>
-                    <td>@obj.D_Food_Name_8</td>
-                    <td>@obj.D_Food_Name_9</td>
-                    <td>@obj.D_Food_Name_10</td> 
-                    <td>@obj.D_Food_Quantity</td>
-                    <td>@obj.D_Total_Calories</td> *@
+                    <td>@obj.D_Serving_Size</td>
+                    <td>@obj.D_Recommended_Servings</td>
+                    <td>@obj.D_Frequency</td>
                     <td> @obj.D_Pros_1 </td>
                     <td> @obj.D_Pros_2 </td>
                     <td> @obj.D_Pros_3 </td>
