--- a/ExerciseXData/Views/Categories/Create.cshtml
+++ b/ExerciseXData/Views/Categories/Create.cshtml
@@ -9,11 +9,11 @@
         </div>
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
 
-        @*<div class="mb-3">
+        <div class="mb-3">
             <label asp-for="C_Id"></label>
             <input asp-for="C_Id" class="form-control" />
             <span asp-validation-for="C_Id" class="text-danger"></span>
-        </div>*@
+        </div>
 
         <div class="mb-3">
             <label asp-for="C_Image"></label>
