--- a/ExerciseXData/Views/Diets/Details.cshtml
+++ b/ExerciseXData/Views/Diets/Details.cshtml
@@ -28,6 +28,23 @@
         </div>
 
         <div class="mb-3">
+        <label asp-for="D_Serving_Size"></label>
+        <input asp-for="D_Serving_Size" class="form-control" />
+        <span asp-validation-for="D_Serving_Size" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
+        <label asp-for="D_Recommended_Servings"></label>
+        <input asp-for="D_Recommended_Servings" class="form-control" />
+        <span asp-validation-for="D_Recommended_Servings" class="text-danger"></span>
+        </div> 
+        <div class="mb-3">
+        <label asp-for="D_Frequency"></label>
+        <input asp-for="D_Frequency" class="form-control" />
+        <span asp-validation-for="D_Frequency" class="text-danger"></span>
+    </div>
+
+        <div class="mb-3">
             <label asp-for="D_Pros_1"></label>
         <input asp-for="D_Pros_1" class="form-control" readonly />
             <span asp-validation-for="D_Pros_1" class="text-danger"></span>
