added authentication code (not tested) added Role to user table

--- a/ExerciseXData/Views/Exercises/Edit.cshtml
+++ b/ExerciseXData/Views/Exercises/Edit.cshtml
@@ -45,19 +45,22 @@
         </div>
         <div class="mb-3">
             <label asp-for="E_Pros_3"></label>
-                <input asp-for="E_Pros_3" class="form-control" />
-                <span asp-validation-for="E_Pros_3" class="text-danger"></span>
+            <input asp-for="E_Pros_3" class="form-control" />
+            <span asp-validation-for="E_Pros_3" class="text-danger"></span>
         </div>
+
         <div class="mb-3">
             <label asp-for="E_Cons_1"></label>
-                <input asp-for="E_Cons_1" class="form-control" />
-                <span asp-validation-for="E_Cons_1" class="text-danger"></span>
+            <input asp-for="E_Cons_1" class="form-control" />
+            <span asp-validation-for="E_Cons_1" class="text-danger"></span>
         </div>
+
         <div class="mb-3">
-                <label asp-for="E_Cons_2"></label>
+            <label asp-for="E_Cons_2"></label>
             <input asp-for="E_Cons_2" class="form-control" />
             <span asp-validation-for="E_Cons_2" class="text-danger"></span>
         </div>
+
         <div class="mb-3">
             <label asp-for="E_Cons_3"></label>
             <input asp-for="E_Cons_3" class="form-control" />
@@ -71,7 +74,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
-        <a asp-controller="Exercise" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+            <a asp-controller="Exercises" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
         </div>
     </div>
 </form>
