--- a/ExerciseXData/Views/Exercises/Index.cshtml
+++ b/ExerciseXData/Views/Exercises/Index.cshtml
@@ -10,7 +10,7 @@
             <h1>Index Exercise</h1>
         </div>
         <div class=" col-6 text-end">
-            <a asp-controller="Exercise" asp-action="Create" class="btn btn-primary">Create New Exercise</a>
+            <a asp-controller="Exercises" asp-action="Create" class="btn btn-primary">Create New Exercise</a>
         </div>
     </div>
 
