--- a/ExerciseXData/Views/Categories/Create.cshtml
+++ b/ExerciseXData/Views/Categories/Create.cshtml
@@ -35,7 +35,7 @@
 
 
         <button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-        <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
