--- a/ExerciseXData/Views/Categories/Delete.cshtml
+++ b/ExerciseXData/Views/Categories/Delete.cshtml
@@ -34,7 +34,7 @@
         </div>
 
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
