--- a/ExerciseXData/Views/Categories/Edit.cshtml
+++ b/ExerciseXData/Views/Categories/Edit.cshtml
@@ -34,7 +34,7 @@
         </div>
         
         <button type="submit" class="btn btn-primary" style="width:150px">Update</button>
-        <a asp-controller="Category" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Categories" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
         </div>
     </div>
 </form>
