--- a/ExerciseXData/Views/Categories/Index.cshtml
+++ b/ExerciseXData/Views/Categories/Index.cshtml
@@ -1,25 +1,25 @@
 ﻿@using ExerciseXData.Models;
 @model IEnumerable<Categories>
 @{
-    ViewData["Title"] = "List of Category";
+    ViewData["Title"] = "List of Categories";
 }
 
 <div class=" container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h1>Index Category</h1>
+            <h1>Index Categories</h1>
         </div>
         <div class=" col-6 text-end">
-            <a asp-controller="Category" asp-action="Create" class="btn btn-primary">Create New Category</a>
+            <a asp-controller="Categories" asp-action="Create" class="btn btn-primary">Create New Categories</a>
         </div>
     </div>
 
     <table class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-               <th>Category ID</th>
-               <th>Category Image</th>
-               <th>Category Name </th>
+               <th>Categories ID</th>
+               <th>Categories Image</th>
+               <th>Categories Name </th>
                <th>Modified Date</th>
                 
             </tr>
@@ -36,13 +36,13 @@
 
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Details" asp-route-id="@obj.C_Id"
+                            <a asp-controller="Categories" asp-action="Details" asp-route-id="@obj.C_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Details</a>
 
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.C_Id"
+                            <a asp-controller="Categories" asp-action="Edit" asp-route-id="@obj.C_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Edit</a>
 
-                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.C_Id"
+                            <a asp-controller="Categories" asp-action="Delete" asp-route-id="@obj.C_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-trash-fill"></i>Delete</a>
                         </div>
                     </td>
