--- a/ExerciseXData/Views/Exercises/Delete.cshtml
+++ b/ExerciseXData/Views/Exercises/Delete.cshtml
@@ -72,7 +72,7 @@
         </div>
 
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="Exercise" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Exercises" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
