--- a/ExerciseXData/Views/Foods/Delete.cshtml
+++ b/ExerciseXData/Views/Foods/Delete.cshtml
@@ -11,6 +11,12 @@
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
 
         <div class="mb-3">
+            <label asp-for="F_Id"></label>
+            <input asp-for="F_Id" disabled class="form-control" />
+
+        </div>
+
+        <div class="mb-3">
             <label asp-for="F_Image"></label>
             <input asp-for="F_Image" disabled class="form-control" />
 
@@ -36,7 +42,7 @@
 
        
         <button type="submit" class="btn btn-danger" style="width:150px">Delete</button>
-        <a asp-controller="Food" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
+        <a asp-controller="Foods" asp-action="Index" class="btn btn-secondary" style="width:150px">Back to List</a>
     </div>
 </form>
 
