Updated User tables, models, service, repository

--- a/ExerciseXData/Views/Categories/Index.cshtml
+++ b/ExerciseXData/Views/Categories/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ExerciseXData.Models;
-@model IEnumerable<Categories>
+@model IEnumerable<CategoriesModel>
 @{
     ViewData["Title"] = "List of Categories";
 }
