--- a/ExerciseXData/Views/Exercises/Delete.cshtml
+++ b/ExerciseXData/Views/Exercises/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Exercises
+﻿@model ExercisesModel
 
 <form method="post" asp-action="Delete">
     @*DeletePOST here can change name with the CategoryController POST method*@
