--- a/ExerciseXData/Views/Exercises/Index.cshtml
+++ b/ExerciseXData/Views/Exercises/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ExerciseXData.Models;
-@model IEnumerable<Exercises>
+@model IEnumerable<ExercisesModel>
 @{
     ViewData["Title"] = "List of Exercises";
 }
