--- a/ExerciseXData/Views/Diets/Index.cshtml
+++ b/ExerciseXData/Views/Diets/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ExerciseXData.Models;
-@model IEnumerable<Diets>
+@model IEnumerable<DietsModel>
 @{
     ViewData["Title"] = "List of Diets";
 }
