--- a/ExerciseXData/Views/Foods/Delete.cshtml
+++ b/ExerciseXData/Views/Foods/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Foods
+﻿@model FoodsModel
 
 <form method="post" asp-action="DeletePOST">
     @*DeletePOST here can change name with the CategoryController POST method*@
