--- a/ExerciseXData/Views/Foods/Create.cshtml
+++ b/ExerciseXData/Views/Foods/Create.cshtml
@@ -9,6 +9,12 @@
         <div asp-validation-summary="All"></div> @*Displays all the validation texts*@
         
         <div class="mb-3">
+            <label asp-for="F_Id"></label>
+            <input asp-for="F_Id" class="form-control" />
+            <span asp-validation-for="F_Id" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
             <label asp-for="F_Image"></label>
             <input asp-for="F_Image" class="form-control" />
             <span asp-validation-for="F_Image" class="text-danger"></span>
