--- a/ExerciseXData/Views/Diets/Create.cshtml
+++ b/ExerciseXData/Views/Diets/Create.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using ExerciseXData.Models
+
 @model DietsModel
 
 <form method="post">
@@ -25,22 +26,6 @@
             <label asp-for="D_Description"></label>
             <input asp-for="D_Description" class="form-control" />
             <span asp-validation-for="D_Description" class="text-danger"></span>
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="D_Serving_Size"></label>
-            <input asp-for="D_Serving_Size" class="form-control" />
-            <span asp-validation-for="D_Serving_Size" class="text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="D_Recommended_Servings"></label>
-            <input asp-for="D_Recommended_Servings" class="form-control" />
-            <span asp-validation-for="D_Recommended_Servings" class="text-danger"></span>
-        </div>
-        <div class="mb-3">
-            <label asp-for="D_Frequency"></label>
-            <input asp-for="D_Frequency" class="form-control" />
-            <span asp-validation-for="D_Frequency" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
