--- a/ExerciseXData/Views/UsersExercises/Index.cshtml
+++ b/ExerciseXData/Views/UsersExercises/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using ExerciseXData.Models;
-@model IEnumerable<DietsModel>
+@model IEnumerable<UsersExercisesModel>
 @{
-    ViewData["Title"] = "List of Diets";
+    ViewData["Title"] = "List of User and their exercises";
 }
 
 @*<partial name =" _Notification" /> @*calls on the partial view from_Notification in shared folder*@
@@ -12,34 +12,20 @@
             <h1>Diet Lists</h1>
         </div>
         <div class=" col-6 text-end">
-            <a asp-controller="Diets" asp-action="Create" class="btn btn-primary">Create New Diet</a>
+            <a asp-controller="UsersExercises" asp-action="Create" class="btn btn-primary">Create New Diet</a>
         </div>
     </div>
 
     <table class="table table-bordered table-striped" style="width:100%">
         <thead>
             <tr>
-                <th> Diet Id</th>
-                <th> Diet Name</th>
-                <th> Description</th>
-                <th>Serving Size </th>
-                <th>Recommended Servings</th>
-                <th>Frequency</th>
-                @* <th>Food Name 4</th>
-                <th>Food Name 5</th>
-                <th>Food Name 6</th>
-                <th>Food Name 7</th>
-                <th>Food Name 8</th>
-                <th>Food Name 9</th>
-                <th>Food Name 10</th>
-                <th>Food Quantity</th>
-                <th>Total Calories</th> *@
-                <th> Pros 1</th>
-                <th> Pros 2</th>
-                <th> Pros 3</th>
-                <th> Cons 1</th>
-                <th> Cons 2</th>
-                <th> Cons 3</th>
+                <th> User Exercise Id</th>
+                <th> User Id</th>
+                <th> Exercise Id</th>
+                <th> Repetition </th>
+                <th> Sets </th>
+                <th> Duration (secs)</th>
+               
                 <th>Modified Date</th>
             </tr>
         </thead>
@@ -48,29 +34,24 @@
             @foreach (var obj in Model)
             {
                 <tr>
-                    <td>@obj.D_Id</td>
-                    <td>@obj.D_Name</td>
-                    <td>@obj.D_Description</td>
-                    <td>@obj.D_Serving_Size</td>
-                    <td>@obj.D_Recommended_Servings</td>
-                    <td>@obj.D_Frequency</td>
-                    <td> @obj.D_Pros_1 </td>
-                    <td> @obj.D_Pros_2 </td>
-                    <td> @obj.D_Pros_3 </td>
-                    <td> @obj.D_Cons_1 </td>
-                    <td> @obj.D_Cons_2 </td>
-                    <td> @obj.D_Cons_3 </td>
-                    <td> @obj.D_Modified_Date</td>
+                    <td>@obj.UE_Id</td>
+                    <td>@obj.U_Id</td>
+                    <td>@obj.E_Id</td>
+                    <td>@obj.Repetition</td>
+                    <td>@obj.Sets</td>
+                    <td>@obj.Duration</td>
+                  
+                    <td> @obj.UE_Modified_Date</td>
 
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Diets" asp-action="Details" asp-route-id="@obj.D_Id"
+                            <a asp-controller="UsersExercises" asp-action="Details" asp-route-id="@obj.UE_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Details</a>
 
-                            <a asp-controller="Diets" asp-action="Edit" asp-route-id="@obj.D_Id"
+                            <a asp-controller="UsersExercises" asp-action="Edit" asp-route-id="@obj.UE_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i>Edit</a>
 
-                            <a asp-controller="Diets" asp-action="Delete" asp-route-id="@obj.D_Id"
+                            <a asp-controller="UsersExercises" asp-action="Delete" asp-route-id="@obj.UE_Id"
                                class="btn btn-primary mx-2"> <i class="bi bi-trash-fill"></i>Delete</a>
                         </div>
                     </td>
