added registration and login view, but registration could not add into database

--- a/ExerciseXData/Views/Categories/Create.cshtml
+++ b/ExerciseXData/Views/Categories/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model CategoriesModel
-@using ExerciseXData.Data;
+﻿@using ExerciseXDataLibrary.Models;
+@model CategoriesModel
 
 <form method="post">
     <div class=" border p-3 mt-4">
