--- a/ExerciseXData/Views/Categories/Details.cshtml
+++ b/ExerciseXData/Views/Categories/Details.cshtml
@@ -1,5 +1,5 @@
-﻿@model CategoriesModel
-
+﻿@using ExerciseXDataLibrary.Models;
+@model CategoriesModel
 
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
