--- a/ExerciseXData/Views/Categories/Edit.cshtml
+++ b/ExerciseXData/Views/Categories/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model CategoriesModel
+﻿@using ExerciseXDataLibrary.Models;
+@model CategoriesModel
 
 <form asp-action="Edit">
     <div class=" border p-3 mt-4">
