--- a/ExerciseXData/Views/Diets/Edit.cshtml
+++ b/ExerciseXData/Views/Diets/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model DietsModel
+﻿@using ExerciseXDataLibrary.Models;
+@model DietsModel
 
 <form method="post">
     <div class=" border p-3 mt-4">
