--- a/ExerciseXData/Views/Exercises/Create.cshtml
+++ b/ExerciseXData/Views/Exercises/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@model ExercisesModel
-@using ExerciseXData.Models;
+﻿@using ExerciseXDataLibrary.Models;
+@model ExercisesModel
 
 <form method="post">
     <div class=" border p-3 mt-4">
