--- a/ExerciseXData/Views/Exercises/Details.cshtml
+++ b/ExerciseXData/Views/Exercises/Details.cshtml
@@ -1,5 +1,5 @@
-﻿@model ExercisesModel
-
+﻿@using ExerciseXDataLibrary.Models;
+@model ExercisesModel
 
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
