--- a/ExerciseXData/Views/Exercises/Edit.cshtml
+++ b/ExerciseXData/Views/Exercises/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExercisesModel
+﻿@using ExerciseXDataLibrary.Models;
+@model ExercisesModel
 
 <form asp-action="Edit">
     <div class=" border p-3 mt-4">
