--- a/ExerciseXData/Views/Foods/Create.cshtml
+++ b/ExerciseXData/Views/Foods/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model FoodsModel
+﻿@using ExerciseXDataLibrary.Models;
+@model FoodsModel
 
 <form method="post">
     <div class=" border p-3 mt-4">
