--- a/ExerciseXData/Views/Foods/Details.cshtml
+++ b/ExerciseXData/Views/Foods/Details.cshtml
@@ -1,10 +1,10 @@
-﻿@model FoodsModel
-
+﻿@using ExerciseXDataLibrary.Models;
+@model FoodsModel
 
     <div class=" border p-3 mt-4">
         <div class=" row pb-2">
-            <h1 class="text-primary"> Exercises Details</h1>
-            <h1>Details for @Model.F_Name</h1>
+            <h1 class="text-primary"> Foods Details</h1>
+            <h1>Details for @Model.F_Id</h1>
             <hr />
         </div>
         
