--- a/ExerciseXData/Views/UsersDiets/Delete.cshtml
+++ b/ExerciseXData/Views/UsersDiets/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model UsersDietsModel
+﻿@using ExerciseXDataLibrary.Models;
+@model UsersDietsModel
 
 <form method="post" asp-action="DeletePOST">
     @*DeletePOST here can change name with the CategoryController POST method*@
