--- a/ExerciseXData/Views/UsersExercises/Index.cshtml
+++ b/ExerciseXData/Views/UsersExercises/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using ExerciseXData.Models;
+﻿@using ExerciseXDataLibrary.Models;
 @model IEnumerable<UsersExercisesModel>
 @{
     ViewData["Title"] = "List of User and their exercises";
