--- a/ExerciseXData/Views/Categories/Delete.cshtml
+++ b/ExerciseXData/Views/Categories/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model CategoriesModel
+﻿@using ExerciseXDataLibrary.Models;
+@model CategoriesModel
 
 <form method="post" asp-action="Delete">
     @*DeletePOST here can change name with the CategoryController POST method*@
