--- a/ExerciseXData/Views/Diets/Delete.cshtml
+++ b/ExerciseXData/Views/Diets/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model DietsModel
+﻿@using ExerciseXDataLibrary.Models;
+@model DietsModel
 
 <form method="post" asp-action="DeletePOST">
     @*DeletePOST here can change name with the CategoryController POST method*@
