--- a/ExerciseXData/Views/Diets/Index.cshtml
+++ b/ExerciseXData/Views/Diets/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using ExerciseXData.Models;
+﻿@using ExerciseXDataLibrary.Models;
 @model IEnumerable<DietsModel>
 @{
     ViewData["Title"] = "List of Diets";
