--- a/ExerciseXData/Views/DietsFoods/Create.cshtml
+++ b/ExerciseXData/Views/DietsFoods/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@using ExerciseXData.Models
+﻿@using ExerciseXDataLibrary.Models
 @model DietsFoodsModel
 
 <form method="post">
@@ -34,9 +34,9 @@
         </div>
 
         <div class="mb-3">
-            <label asp-for="Frequency"></label>
-            <input asp-for="Frequency" class="form-control" />
-            <span asp-validation-for="Frequency" class="text-danger"></span>
+            <label asp-for="DF_Frequency"></label>
+            <input asp-for="DF_Frequency" class="form-control" />
+            <span asp-validation-for="DF_Frequency" class="text-danger"></span>
         </div>
 
         <div class="mb-3">
