--- a/ExerciseXData/Views/Exercises/Delete.cshtml
+++ b/ExerciseXData/Views/Exercises/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExercisesModel
+﻿@using ExerciseXDataLibrary.Models;
+@model ExercisesModel
 
 <form method="post" asp-action="Delete">
     @*DeletePOST here can change name with the CategoryController POST method*@
