--- a/ExerciseXData/Views/Exercises/Index.cshtml
+++ b/ExerciseXData/Views/Exercises/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using ExerciseXData.Models;
+﻿@using ExerciseXDataLibrary.Models;
 @model IEnumerable<ExercisesModel>
 @{
     ViewData["Title"] = "List of Exercises";
