--- a/ExerciseXData/Views/Shared/_Layout.cshtml
+++ b/ExerciseXData/Views/Shared/_Layout.cshtml
@@ -60,12 +60,20 @@
                                 <a class="dropdown-item" asp-controller="Statistics" asp-action="Exercises"> Exercises</a>
                                 
                             </div>
-
                         </li>
+
+                       
                         @* <li class="nav-item">
                             <a class="nav-link text-dark"  asp-controller="Home" asp-action="LogOut">Log Out</a>
                         </li> *@
                     </ul>
+                    <div class="ms-auto">
+                        <button class="btn btn-primary" type="button" asp-controller="Account" asp-action="Register">Sign In</button>
+                    </div>
+
+                    <div class="ms-auto">
+                        <button class="btn btn-primary" type="button" asp-controller="Account" asp-action="Login">Log In</button>
+                    </div>
                 </div>
             </div>
         </nav>
