--- a/ExerciseXData/Views/UsersExercises/Create.cshtml
+++ b/ExerciseXData/Views/UsersExercises/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model UsersDietsModel
+﻿@using ExerciseXDataLibrary.Models;
+@model UsersDietsModel
 
 <form method="post">
     <div class=" border p-3 mt-4">
