register is working(need to add validation)

--- a/ExerciseXData/Views/Account/Login.cshtml
+++ b/ExerciseXData/Views/Account/Login.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model ExerciseXDataLibrary.DataTransferObject.LoginDto;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
