--- a/ExerciseXData/Views/Account/Register.cshtml
+++ b/ExerciseXData/Views/Account/Register.cshtml
@@ -41,6 +41,33 @@
         <input asp-for="Goal" />
         <span asp-validation-for="Goal"></span>
     </div>
+
+    <div>
+        <label asp-for="Lifestyle_Condition_1"></label>
+        <input asp-for="Lifestyle_Condition_1" />
+        <span asp-validation-for="Lifestyle_Condition_1"></span>
+    </div>
+
+    <div>
+        <label asp-for="Lifestyle_Condition_2"></label>
+        <input asp-for="Lifestyle_Condition_2" />
+        <span asp-validation-for="Lifestyle_Condition_2"></span>
+    </div>
+    <div>
+        <label asp-for="Lifestyle_Condition_3"></label>
+        <input asp-for="Lifestyle_Condition_3" />
+        <span asp-validation-for="Lifestyle_Condition_3"></span>
+    </div>
+    <div>
+        <label asp-for="Lifestyle_Condition_4"></label>
+        <input asp-for="Lifestyle_Condition_4" />
+        <span asp-validation-for="Lifestyle_Condition_4"></span>
+    </div>
+    <div>
+        <label asp-for="Lifestyle_Condition_5"></label>
+        <input asp-for="Lifestyle_Condition_5" />
+        <span asp-validation-for="Lifestyle_Condition_5"></span>
+    </div>
     <button type="submit">Register</button>
 </form>
 
