--- a/ExerciseXData/Views/Shared/_Layout.cshtml
+++ b/ExerciseXData/Views/Shared/_Layout.cshtml
@@ -68,11 +68,11 @@
                         </li> *@
                     </ul>
                     <div class="ms-auto">
-                        <button class="btn btn-primary" type="button" asp-controller="Account" asp-action="Register">Sign In</button>
+                        <a class="btn btn-primary"  asp-controller="Account" asp-action="Register">Sign In</a>
                     </div>
 
                     <div class="ms-auto">
-                        <button class="btn btn-primary" type="button" asp-controller="Account" asp-action="Login">Log In</button>
+                        <a class="btn btn-primary"  asp-controller="Account" asp-action="Login">Log In</a>
                     </div>
                 </div>
             </div>
