--- a/ExerciseXData/Views/Account/Login.cshtml
+++ b/ExerciseXData/Views/Account/Login.cshtml
@@ -10,17 +10,20 @@
 </head>
 <body>
     <div class="login-container">
-        <form id="loginForm">
+        <form asp-controller="Account" asp-action="Login" method="post" id="loginForm">
             <h2>Login</h2>
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+                <label asp-for="Username">Username</label>
+                <br />
+                <input asp-for ="Username" type="text" required>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <label asp-for="Password">Password</label>
+                 <br />
+                <input asp-for="Password" type="password" required>
             </div>
-            <button type="submit">Login</button>
+              <br />
+            <button class="btn btn-primary" button type="submit">Login</button>
             <p class="error-message" id="errorMessage"></p>
         </form>
     </div>
