--- a/ExerciseXData/Views/Account/Register.cshtml
+++ b/ExerciseXData/Views/Account/Register.cshtml
@@ -3,72 +3,96 @@
 <form asp-action="Register" method="post">
     <div>
         <label asp-for="Email"></label>
+        <br />
         <input asp-for="Email" />
         <span asp-validation-for="Email"></span>
     </div>
     <div>
         <label asp-for="UserName"></label>
+        <br />
         <input asp-for="UserName" />
         <span asp-validation-for="UserName"></span>
     </div>
     <div>
         <label asp-for="Password"></label>
+        <br />
         <input asp-for="Password" type="password" />
         <span asp-validation-for="Password"></span>
     </div>
     <div>
-        <label asp-for="Gender"></label>
-        <input asp-for="Gender" />
+        <label asp-for="Gender">Gender</label>
+        <div>
+            <input type="radio" asp-for="Gender" id="Male" value="Male" />
+            <label for="Male">Male</label>
+        </div>
+        <div>
+            <input type="radio" asp-for="Gender" id="Female" value="Female" />
+            <label for="Female">Female</label>
+        </div>
+        <div>
+            <input type="radio" asp-for="Gender" id="PreferNotToSay" value="Prefer not to say" />
+            <label for="PreferNotToSay">Prefer not to say</label>
+        </div>
         <span asp-validation-for="Gender"></span>
     </div>
     <div>
         <label asp-for="Age"></label>
+        <br />
         <input asp-for="Age" type="number" />
         <span asp-validation-for="Age"></span>
     </div>
     <div>
         <label asp-for="Height"></label>
+        <br />
         <input asp-for="Height" type="number" step="0.01" />
         <span asp-validation-for="Height"></span>
     </div>
     <div>
         <label asp-for="Weight"></label>
+        <br />
         <input asp-for="Weight" type="number" step="0.01" />
         <span asp-validation-for="Weight"></span>
     </div>
     <div>
         <label asp-for="Goal"></label>
+        <br />
         <input asp-for="Goal" />
         <span asp-validation-for="Goal"></span>
     </div>
 
     <div>
         <label asp-for="Lifestyle_Condition_1"></label>
+        <br />
         <input asp-for="Lifestyle_Condition_1" />
         <span asp-validation-for="Lifestyle_Condition_1"></span>
     </div>
 
     <div>
         <label asp-for="Lifestyle_Condition_2"></label>
+        <br />
         <input asp-for="Lifestyle_Condition_2" />
         <span asp-validation-for="Lifestyle_Condition_2"></span>
     </div>
     <div>
         <label asp-for="Lifestyle_Condition_3"></label>
+        <br />
         <input asp-for="Lifestyle_Condition_3" />
         <span asp-validation-for="Lifestyle_Condition_3"></span>
     </div>
     <div>
         <label asp-for="Lifestyle_Condition_4"></label>
+        <br />
         <input asp-for="Lifestyle_Condition_4" />
         <span asp-validation-for="Lifestyle_Condition_4"></span>
     </div>
     <div>
         <label asp-for="Lifestyle_Condition_5"></label>
+        <br />
         <input asp-for="Lifestyle_Condition_5" />
         <span asp-validation-for="Lifestyle_Condition_5"></span>
     </div>
-    <button type="submit">Register</button>
+    <br />
+    <button class="btn btn-primary" button type="submit">Register</button>
 </form>
 
 @section Scripts {
