added user dashboard function

--- a/ExerciseXData/Views/Shared/_Layout.cshtml
+++ b/ExerciseXData/Views/Shared/_Layout.cshtml
@@ -74,6 +74,10 @@
                     <div class="ms-auto">
                         <a class="btn btn-primary"  asp-controller="Account" asp-action="Login">Log In</a>
                     </div>
+
+                    <div class="ms-auto">
+                        <a class="btn btn-primary" asp-controller="Account" asp-action="UserDashboard">UserDashboard</a>
+                    </div>
                 </div>
             </div>
         </nav>
