--- a/ExerciseXData/Views/_ViewStart.cshtml
+++ b/ExerciseXData/Views/_ViewStart.cshtml
@@ -1,3 +1,3 @@
 ﻿@{
-    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml"; // Assuming your existing layout is called _Layout.cshtml
 }
